2017-12-14  Richard Biener  <rguenther@suse.de>

PR tree-optimization/83326
	* tree-ssa-loop-ivcanon.c (try_unroll_loop_completely): Add
	may_be_zero parameter and handle it by not marking the first
	peeled copy as not exiting the loop.
	(try_peel_loop): Likewise.
	(canonicalize_loop_induction_variables): Use number_of_iterations_exit
	to handle the case of constant or zero iterations and perform
	loop header copying on-the-fly.

	* gcc.dg/tree-ssa/pr81388-2.c: Adjust.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@255635 138bc75d-0d04-0410-961f-82ee72b054a4